simple-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      containers:
      - name: simple-server
        image: simple-server:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 2
