simple-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-svc
spec:
  type: ClusterIP
  selector:
    app: simple-server
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
